# webapp

./: .gitignore  CMakeLists.txt  README.md
conf/: my_config
docker/: Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: blocking_request_handler.h  chat_request_handler.h  config_parser.h  echo_request_handler.h  error_handler.h  header.h  health_request_handler.h  http_client.h  mime_types.h  password_handler.h  proxy_request_handler.h  reply.h  request.h  request_handler.h  request_parser.h  server.h  session.h  static_request_handler.h  status_request_handler.h  utils.h
src/: blocking_request_handler.cc  chat_request_handler.cc  config_parser.cc  echo_request_handler.cc  error_handler.cc  health_request_handler.cc  http_client.cc  mime_types.cc  password.txt  password_handler.cc  proxy_request_handler.cc  reply.cc  request_handler.cc  request_parser.cc  server.cc  server_main.cc  session.cc  static_request_handler.cc  status_request_handler.cc  utils.cc
static/chat/: index.html
static/static1/dir1/: index.html
static/static1/dir2/: index.html
tests/: backslash_escape_in_string  bad_transition3  bad_transition4  bad_transition5  blocking_request_handler_test.cc  chat_request_handler_test.cc  config_parser_test.cc  echo_request_handler_test.cc  error_handler_test.cc  example_config  health_request_handler_test.cc  integration_test.sh  nested_brackets  password_handler_test.cc  proxy_request_handler_test.cc  quote_followed_by_letter  quote_in_string_backslashed  request_handler_test.cc  request_parser_test.cc  server_test.cc  sessionConfig  session_test.cc  static_request_handler_test.cc  status_request_handler_test.cc  test-README  test_config  triple_double_quote  utils_test.cc
tests/sample_configs/: example_config  quote_followed_by_letter  quote_in_string_backslashed  sessionConfig  toStringTest
